# ViNo

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  GRAMMAR.md  README.md  dev_build_deps.sh  grammar_ideas.txt  output.puml  script.vnsf
cmake/: add_default_target_compile_definitions.cmake  dev-mode.cmake  docs.cmake  external_deps.cmake  folders.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  tidy-targets.cmake  tidy.cmake  variables.cmake
docs/: Doxyfile.in
include/: TokenEnum.h  custom_errors.h  stuff.h  warning.md
src/: AST.cpp  AST.h  AST.hpp  CodeGen.cpp  CodeGen.hpp  IVisitor.cpp  IVisitor.hpp  MainCompiler.cpp  MainCompiler.hpp  Parser.cpp  Parser.h  Parser.hpp  Persona.cpp  Persona.h  Persona.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzer.hpp  SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp  TokenEnum.cpp  TokenEnum.h  TokenEnum.hpp  TokenScanner.cpp  TokenScanner.h  TokenScanner.hpp  VisitorImplementations.cpp  VisitorImplementations.hpp  custom_errors.h  custom_errors.hpp  main.cpp  stuff.h  stuff.hpp
src/compiler/: AST.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  IVisitor.hpp  MainCompiler.cpp  MainCompiler.hpp  Parser.cpp  Parser.hpp  Persona.cpp  Persona.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  SymbolTable.cpp  SymbolTable.hpp  TokenEnum.cpp  TokenEnum.hpp  TokenScanner.cpp  TokenScanner.hpp  VisitorImplementations.cpp  VisitorImplementations.hpp  main.cpp
src/gui/: Box.cpp  Box.hpp  CMakeLists.txt  Fonts.cpp  Fonts.hpp  ImgData.cpp  ImgData.hpp  Shader.hpp  Window.cpp  Window.hpp  glad.c  vinogui.cpp  vinogui.hpp
src/gui/test_app/: MainMenu.cpp  MainMenu.hpp  TitleScreen.cpp  TitleScreen.hpp  main.cpp
src/gui/test_app/shaders/: basicFrag.glsl  basicVertex.glsl  charFrag.glsl  colorFrag.glsl
src/vm/: CMakeLists.txt  VMAtoms.hpp  VMHandler.hpp  VMMain.cpp
test/: CMakeLists.txt  Makefile  Stuff_test.cpp  test_TokenScanner.cpp
test/CodeGen/: CodeGen_test.cpp
test/Compiler/: CodeGen_test.cpp  FullCompiler_test.cpp  Parser_test.cpp  TokenScanner_test.cpp
test/Compiler/resources/: long_copy.vnsf  short.vnsf  test.vnsf
test/FullCompiler/: FullCompiler_test.cpp
test/FullCompiler/resources/: long_copy.vnsf  missing.vnsf  short.vnsf  test.vnsf
test/Parser/: Parser_test.cpp
test/TokenScanner/: CMakeLists.txt  TokenScanner_test.cpp  cmake-token-scanner-cpp_test.cpp  input.txt
test/main/: test.vnsf
vm/shaders/: boxVertex.glsl  charVertex.glsl
